# C-Codebase

./: .gitignore  README.md
.github/agents/: c-low-level-professor.agent.md  create-c-project.agent.md
Assembly/: README.md
Assembly/method-1/: README.md
Assembly/method-2/: README.md
Automatus/: main.c
Backend/: main.c
Beginner/: README.md  inverter-numero-README.md
Beginner/Goto/: README.md  main.c
Beginner/Swap/: README.md  executable  main.c  swap.h
Callback/: README.md  main.c
Colored-Output/: README.md
Compare/: README.md  main.c
Concepts/Garbage-Collector/: main.c
Conversor-pdf/: README.md  file.xlms  main.c
Conversor-pdf/html/: README.md  index.html
Debugging/stderr/: main.c
Easy-dir/: files-content.c
Event-Driven-Programming/: README.md
Files/Create/: README.md  main.c
Files/Properties/: README.md  example.properties
Files/Reader/: get_int.c  gets.c
Files/String/: README.md  string.txt
Function/: README.md
Function/Multi-args/: README.md  main.c
Function/pointers/: README.md  main.c
Hash/: README.md  main.c
Internet-Connection/: README.md
Joke?/: var_args.c
Json/: README.md
Json/Lib/: main.c
Loop-Interval/: main.c
Memory/: README.md
Memory-pool/: Readme.md  multithread-app.c
Memory_pool/: Readme.md
Miscellaneous/: ascii.c  os.c
Network/: README.md
Preprocessors/: README.md  aaa.txt  sample3.c
Run-Loop/: main.c
Serial-Listener/: main.c
Shared-Hashtable/: hashtable.c  insert.h  main.c
Time/: README.md  main.c
USB/: copy.c
Union/: README.md
Word_Counter/: main.c
X11/: Readme.md
cross-compilation/: .gitignore  ADVANCED.md  CMakeLists.txt  EXAMPLES.md  GETTING_STARTED.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  toolchain-mingw.cmake
cross-compilation/.github/workflows/: build.yml
cross-compilation/include/: platform.h
cross-compilation/scripts/: build-help.sh  run-tests.sh  setup-mingw.sh  test-wine.sh
cross-compilation/src/: main.c  platform.c  test.c
docs/: ANALYSIS_REPORT.md  README.md  libs_manual_pt.url  links.txt
function/: README.md
json/: README.md
miscellaneous/: README.md
screenshot-project/: Makefile  README.md
(+202 files in other folders)
